--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\CamCont.cs" />
+     <Compile Include="Assets\Scripts\piu_piu.cs" />
      <Compile Include="Assets\Scripts\planeController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
