--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -49,6 +49,7 @@
      <Compile Include="Assets\Scripts\CamCont.cs" />
      <Compile Include="Assets\Scripts\piu_piu.cs" />
      <Compile Include="Assets\Scripts\planeController.cs" />
+     <Compile Include="Assets\Scripts\planeController2.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
